<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">File Command</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="books">Bookmarks</string>
    <string name="icon">icon</string>
    <string name="ad_banner_id">ca-app-pub-2775393489349666/3576425420</string>
    <string name="ad_interstitial_id">ca-app-pub-2775393489349666/9838581449</string>
    <string name="ad_reward_video_id">ca-app-pub-2775393489349666/6008692239</string>
    <string name="ad_unit_id_algo">ca-app-pub-2775393489349666~6204079450</string>
    <string name="efn">Enter File Name</string>
    <string name="storage">Internal shared storage</string>
    <string name="gallery">Gallery</string>
    <string name="apps">Home</string>
    <string name="ftp">FTP</string>
    <string name="bookmanag">Bookmarks Manager</string>
    <string name="setting">Settings</string>
    <string name="select">Select Item</string>
    <string name="pressagain">Press  again to exit</string>
    <string name="open">Open</string>
    <string name="backup">Backup</string>
    <string name="uninstall">Uninstall</string>
    <string name="play">Play store</string>
    <string name="properties">Properties</string>
    <string name="copyingapk">Copying apk to </string>
    <string name="addbook">Add Bookmark</string>
    <string name="delbook">Delete Bookmark</string>
    <string name="addtobook">Add to Bookmark</string>
    <string name="enterpath">Enter Path</string>
    <string name="cancel">CANCEL</string>
    <string name="create">CREATE</string>
    <string name="success">Success</string>
    <string name="filenotexists">File Not Exists</string>
    <string name="loading">Loading&#8230;</string>
    <string name="file_empty">File is empty</string>
    <string name="error">Error</string>
    <string name="cantlistfiles">Can\'t list files without root</string>
    <string name="searchresults">Search results of %s</string>
    <string name="itemsselected">Items Selected</string>
    <string name="newhomedirectory">New Home Directory</string>
    <string name="rename">Rename</string>
    <string name="save">Save</string>
    <string name="renameerror">Rename Unsuccessful</string>
    <string name="renamed">Rename Successful</string>
    <string name="bookmarksadded">Bookmarks Added</string>
    <string name="fileexist">File with same name already exists </string>
    <string name="filecreated">File Created</string>
    <string name="searchpath">Search Path</string>
    <string name="enterfile">Enter File Name</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="size_capitalized">Size</string>
    <string name="size">size of folder</string>
    <string name="totalitems">Total Items</string>
    <string name="enterzipname">Enter Zip Name</string>
    <string name="noappfound">No App found to open this file</string>
    <string name="copying">Copying</string>
    <string name="moving">Moving</string>
    <string name="add">Add</string>
    <string name="tab">Tab</string>
    <string name="file">File</string>
    <string name="folder">Folder</string>
    <string name="newfolder">New Folder</string>
    <string name="entername">Enter Name</string>
    <string name="extracting">Extracting</string>
    <string name="stopping">Stopping</string>
    <string name="guide1">Welcome to Amaze File Manager</string>
    <string name="guide2">Touch the blue strip to show or hide PathBar</string>
    <string name="guide3">Touch and hold any file for more options</string>
    <string name="guide4">Like copy,move,properties etc</string>
    <string name="guide5">Use Back Button of your device to exit app anytime&#8230;</string>
    <string name="guide6">..And use left arrow button for navigation in file manager</string>
    <string name="maintab">Main Tab can\'t be removed</string>
    <string name="openparent">Open Parent Directory</string>
    <string name="openwith">Open with</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="extract">Extract</string>
    <string name="compress">Compress</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dialog_delete_category_directories">Directories</string>
    <string name="dialog_delete_category_files">Files</string>
    <string name="dialog_delete_disclaimer">Deleting the items below will permanently remove them from your device and they cannot be recovered.</string>
    <string name="dialog_delete_title">Delete items permanently?</string>
    <string name="deleting">Deleting</string>
    <string name="questionset">Do you want to set current path as home for this tab?</string>
    <string name="viewmode">View Mode</string>
    <string name="uimode">UI Mode</string>
    <string name="directorysort">Directory Sort Mode</string>
    <string name="sortby">Sort By</string>
    <string name="theme">Theme</string>
    <string name="skin">Skin</string>
    <string name="random">Random Skin</string>
    <string name="random_summary">Sets random primary color at startup</string>
    <string name="colorize">Colorize Icons</string>
    <string name="colorize_summary">Sets static icon color. Doesn\'t override directory icon color preference.</string>
    <string name="back">Back</string>
    <string name="home">Home</string>
    <string name="paste">Paste</string>
    <string name="close">Close</string>
    <string name="history">History</string>
    <string name="refresh">Refresh</string>
    <string name="copy">Copy</string>
    <string name="rootmode">Root Explorer</string>
    <string name="rootmodesummary">For rooted device only. Check it only if you are sure about it.</string>
    <string name="mountsystemsummary">Enable this if you want to edit System Files</string>
    <string name="mountsystem">Mount System Folders as Writable</string>
    <string name="rootfailure">Root Access not granted</string>
    <string name="hiddenfailure">Can\'t access hidden files</string>
    <string name="selectall">Select All</string>
    <string name="delete">Delete</string>
    <string name="setashome">Set As Home</string>
    <string name="sethome">Set Home Directory</string>
    <string name="foldercolor">Folder Color</string>
    <string name="imagegallery">Image Gallery</string>
    <string name="fileexplorer">File Explorer</string>
    <string name="changegallerypath">Change Gallery Path</string>
    <string name="usedefaultgallerypath">Use Default Image Gallery Path</string>
    <string name="simple">Simple UI</string>
    <string name="card">Card UI</string>
    <string name="light">Material Light</string>
    <string name="dark">Material Dark</string>
    <string name="daytime">Daytime</string>
    <string name="red">Red</string>
    <string name="pink">Pink</string>
    <string name="purple">Purple</string>
    <string name="deep_purple">Deep Purple</string>
    <string name="indigo">Indigo</string>
    <string name="blue">Blue</string>
    <string name="light_blue">Light Blue</string>
    <string name="cyan">Cyan</string>
    <string name="teal">Teal</string>
    <string name="green">Green</string>
    <string name="light_green">Light Green</string>
    <string name="amber">Amber</string>
    <string name="orange">Orange</string>
    <string name="deep_orange">Deep Orange</string>
    <string name="brown">Brown</string>
    <string name="black">Black</string>
    <string name="blue_grey">Blue Grey</string>
    <string name="supersu">SuperSU</string>
    <string name="foldersOnTop">Folders On Top</string>
    <string name="filesOnTop">Files On Top</string>
    <string name="noneOnTop">None On Top</string>
    <string name="sortName">Name</string>
    <string name="lastModified">Last Modified</string>
    <string name="sortSize">Size</string>
    <string name="sortNameDesc">Name (Desc)</string>
    <string name="lastModifiedDesc">Last Modified (Desc)</string>
    <string name="sortSizeDesc">Size (Desc)</string>
    <string name="detailedView">Detailed View</string>
    <string name="simpleView">Simple View</string>
    <string name="Yellow">Yellow</string>
    <string name="pick_a_file">Pick a file</string>
    <string name="process_viewer">Process Viewer</string>
    <string name="in_safe">Insufficient space</string>
    <string name="no_file_overwrite">No File Overwritten</string>
    <string name="skip">Skip</string>
    <string name="overwrite">Overwrite</string>
    <string name="cant_read_file">Can\'t read file</string>
    <string name="not_allowed">Not Allowed</string>
    <string name="processes">Processes</string>
    <string name="searching">Searching %s</string>
    <string name="copying_fles">Copying Files</string>
    <string name="done">Done</string>
    <string name="Extracting_fles">Extracting Files</string>
    <string name="set">Set</string>
    <string name="enablerootmde">Enable Root Mode</string>
    <string name="goback">Go Back</string>
    <string name="foldercreated">Folder Created</string>
    <string name="newfile">New File</string>
    <string name="nofiles">No Files</string>
    <string name="tapnhold">Tap and hold on a File or Folder for more options</string>
    <string name="pathcopied">Path copied to clipboard</string>
    <string name="used">used space</string>
    <string name="used_by_others">used by others</string>
    <string name="free">free space</string>
    <string name="atroot">You are at the root</string>
    <string name="listview">List View</string>
    <string name="gridview">Grid View</string>
    <string name="setlistview">Setting ListView</string>
    <string name="setgridview">Setting GridView</string>
    <string name="permission">Permissions</string>
    <string name="hide">Hide</string>
    <string name="exit">Exit</string>
    <string name="enternewname">Enter new name</string>
    <string name="doforall">Do for all items</string>
    <string name="gridcolumnno">Number of columns in grid view</string>
    <string name="randomDialog">Random</string>
    <string name="setRandom">Changes will take place after you restart the app</string>
    <string name="authors">Authors</string>
    <string name="changelog">Changelog</string>
    <string name="fullChangelog">Full Changelog</string>
    <string name="ok">OK</string>
    <string name="chooseUI">Choose Item UI</string>
    <string name="ui">Interface</string>
    <string name="general">General</string>
    <string name="thumbSummary">Show Thumbnails of apps and images</string>
    <string name="thumb">Show Thumbnails</string>
    <string name="hidden">Show Hidden Files and Folders</string>
    <string name="lastModifiedSummary">Show the date and time when the file was modified last time</string>
    <string name="lastModifiedPref">Show Last Modified</string>
    <string name="sizePrefSummary">Show size of files and number of items in folders</string>
    <string name="sizePref">Show Sizes</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="rootPrefSummary">Show Permissions of Files and Folders</string>
    <string name="rootPref">Show Permissions</string>
    <string name="text_tick_picture">Picture</string>
    <string name="text_tick_music">Music</string>
    <string name="text_tick_videos">Videos</string>
    <string name="text_tick_documents">Documents</string>
    <string name="text_tick_archives">Archives</string>
    <string name="text_tick_downloads">Downloads</string>
    <string name="text_tick_secured_files">Secured Files</string>
    <string name="text_tick_recent_files">Recent Files</string>
    <string name="text_tick_convert_files">Convert Files</string>
    <string name="text_tick_favorites">Favorites</string>
    <string name="text_tick_pc_files_transfer">PC File Transfer</string>
</resources>